Clean up code with sonarlint